--- a/Civitates/CityPopover.storyboard
+++ b/Civitates/CityPopover.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -18,14 +17,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZgG-WL-dMb">
+                                <rect key="frame" x="0.0" y="538" width="600" height="62"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="191-Xb-Gmj">
-                                <rect key="frame" x="279" y="36" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="277" y="36" width="46" height="22"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="b96-OV-F6l">
-                                <rect key="frame" x="0.0" y="73" width="600" height="465"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="b96-OV-F6l">
+                                <rect key="frame" x="0.0" y="74" width="600" height="464"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="HIG-UL-iFe" id="aT5-1p-hLS"/>
@@ -42,17 +45,31 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.97550101902173914" green="0.97550101902173914" blue="0.97550101902173914" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="ZgG-WL-dMb" firstAttribute="top" secondItem="5HR-sg-sUi" secondAttribute="top" constant="150" id="46A-Tr-t2i"/>
                             <constraint firstAttribute="trailingMargin" secondItem="b96-OV-F6l" secondAttribute="trailing" constant="-16" id="4Cr-kb-wCt"/>
                             <constraint firstItem="m1o-Iz-nVn" firstAttribute="top" secondItem="EWT-8a-FFM" secondAttribute="bottom" constant="16" id="6Y5-PE-afD"/>
+                            <constraint firstAttribute="bottom" secondItem="ZgG-WL-dMb" secondAttribute="bottom" id="6nk-6x-ZRw"/>
                             <constraint firstItem="191-Xb-Gmj" firstAttribute="top" secondItem="pEf-Dl-gij" secondAttribute="bottom" constant="16" id="UER-aG-0fA"/>
                             <constraint firstItem="EWT-8a-FFM" firstAttribute="top" secondItem="b96-OV-F6l" secondAttribute="bottom" constant="16" id="UEV-6U-7Oh"/>
                             <constraint firstItem="b96-OV-F6l" firstAttribute="top" secondItem="191-Xb-Gmj" secondAttribute="bottom" constant="16" id="bPZ-vB-dMv"/>
                             <constraint firstItem="b96-OV-F6l" firstAttribute="leading" secondItem="5HR-sg-sUi" secondAttribute="leadingMargin" constant="-16" id="ei3-hN-juk"/>
+                            <constraint firstItem="EWT-8a-FFM" firstAttribute="top" secondItem="b96-OV-F6l" secondAttribute="bottom" constant="16" id="kdr-nf-9Vo"/>
                             <constraint firstAttribute="centerX" secondItem="EWT-8a-FFM" secondAttribute="centerX" id="l85-4B-qLe"/>
+                            <constraint firstItem="EWT-8a-FFM" firstAttribute="top" secondItem="b96-OV-F6l" secondAttribute="bottom" id="oBm-kU-L7c"/>
                             <constraint firstAttribute="centerX" secondItem="191-Xb-Gmj" secondAttribute="centerX" id="olM-2F-D4N"/>
+                            <constraint firstItem="ZgG-WL-dMb" firstAttribute="leading" secondItem="5HR-sg-sUi" secondAttribute="leadingMargin" constant="-16" id="wdF-Cg-1MH"/>
+                            <constraint firstItem="ZgG-WL-dMb" firstAttribute="top" secondItem="b96-OV-F6l" secondAttribute="bottom" id="x5X-L2-vC2"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ZgG-WL-dMb" secondAttribute="trailing" constant="-16" id="zXk-op-PVS"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="46A-Tr-t2i"/>
+                                <exclude reference="UEV-6U-7Oh"/>
+                                <exclude reference="oBm-kU-L7c"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="nameLabel" destination="191-Xb-Gmj" id="vh6-i7-JWs"/>
