--- a/Civitates/Base.lproj/Main.storyboard
+++ b/Civitates/Base.lproj/Main.storyboard
@@ -4,6 +4,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="quattrocento.bold.ttf">
+            <string>Quattrocento-Bold</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -20,23 +25,23 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" rotateEnabled="NO" pitchEnabled="NO" showsBuildings="NO" showsPointsOfInterest="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jz2-IQ-0Rd">
                                 <rect key="frame" x="0.0" y="20" width="1024" height="748"/>
                             </mapView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WPW-DW-pTo" customClass="KSLabel">
-                                <rect key="frame" x="475" y="40" width="75" height="47"/>
-                                <fontDescription key="fontDescription" name="Papyrus" family="Papyrus" pointSize="30"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="900" minValue="-1000" maxValue="1600" translatesAutoresizingMaskIntoConstraints="NO" id="GSB-hP-Wyk">
-                                <rect key="frame" x="143" y="72" width="738" height="31"/>
+                                <rect key="frame" x="143" y="65" width="738" height="31"/>
                             </slider>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dLz-WK-x5O">
-                                <rect key="frame" x="977" y="40" width="25" height="25"/>
-                                <state key="normal" image="Artwork/search.png">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dLz-WK-x5O">
+                                <rect key="frame" x="950" y="40" width="52" height="52"/>
+                                <state key="normal" backgroundImage="Artwork/antiquesearch2.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="searchButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RRr-Zn-pHd"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WPW-DW-pTo" customClass="KSLabel">
+                                <rect key="frame" x="468" y="35" width="89" height="40"/>
+                                <fontDescription key="fontDescription" name="Quattrocento-Bold" family="Quattrocento" pointSize="36"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -49,9 +54,9 @@
                             <constraint firstAttribute="trailing" secondItem="Jz2-IQ-0Rd" secondAttribute="trailing" id="lHI-QL-Z8K"/>
                             <constraint firstItem="Jz2-IQ-0Rd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ltb-SN-bgf"/>
                             <constraint firstItem="Jz2-IQ-0Rd" firstAttribute="top" secondItem="rYt-7d-Qgj" secondAttribute="bottom" id="pU0-7O-AhZ"/>
-                            <constraint firstItem="WPW-DW-pTo" firstAttribute="top" secondItem="rYt-7d-Qgj" secondAttribute="bottom" constant="20" id="q8p-kH-TUN"/>
+                            <constraint firstItem="WPW-DW-pTo" firstAttribute="top" secondItem="rYt-7d-Qgj" secondAttribute="bottom" constant="15" id="q8p-kH-TUN"/>
                             <constraint firstItem="GSB-hP-Wyk" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="145" id="wB8-M6-OF6"/>
-                            <constraint firstItem="GSB-hP-Wyk" firstAttribute="top" secondItem="WPW-DW-pTo" secondAttribute="bottom" constant="-15" id="xYf-bm-Use"/>
+                            <constraint firstItem="GSB-hP-Wyk" firstAttribute="top" secondItem="WPW-DW-pTo" secondAttribute="bottom" constant="-10" id="xYf-bm-Use"/>
                         </constraints>
                     </view>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
@@ -69,7 +74,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Artwork/search.png" width="25" height="25"/>
+        <image name="Artwork/antiquesearch2.png" width="25" height="25"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackOpaque"/>
