--- a/Civitates/CityNameTableViewCell2.xib
+++ b/Civitates/CityNameTableViewCell2.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -9,7 +10,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CityNameTableViewCell2">
-            <rect key="frame" x="0.0" y="0.0" width="326" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="239" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="768" height="43"/>
@@ -36,11 +37,13 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottomMargin" secondItem="2tS-fo-5gI" secondAttribute="bottom" id="Ga7-Or-Gmn"/>
+                    <constraint firstItem="C6t-2d-ETy" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="16" id="USu-61-3An"/>
                     <constraint firstItem="kYH-ej-xI2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="W9j-0a-XLF"/>
                     <constraint firstItem="C6t-2d-ETy" firstAttribute="leading" secondItem="2tS-fo-5gI" secondAttribute="trailing" constant="8" id="ZoO-Lg-jk3"/>
                     <constraint firstItem="2tS-fo-5gI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="eCj-zf-RRa"/>
-                    <constraint firstItem="2tS-fo-5gI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="fdD-s8-PTs"/>
+                    <constraint firstItem="2tS-fo-5gI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="16" id="fdD-s8-PTs"/>
                     <constraint firstItem="kYH-ej-xI2" firstAttribute="leading" secondItem="2tS-fo-5gI" secondAttribute="trailing" constant="8" id="n4R-gi-bHf"/>
+                    <constraint firstItem="kYH-ej-xI2" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="16" id="o4T-bt-gUc"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -48,7 +51,7 @@
                 <outlet property="cultureLabel" destination="C6t-2d-ETy" id="8Ba-eX-4ov"/>
                 <outlet property="nameLabel" destination="kYH-ej-xI2" id="fUf-5O-sFU"/>
             </connections>
-            <point key="canvasLocation" x="99" y="154"/>
+            <point key="canvasLocation" x="55.5" y="154"/>
         </tableViewCell>
     </objects>
 </document>
