--- a/Civitates/CityNameTableViewCell2.xib
+++ b/Civitates/CityNameTableViewCell2.xib
@@ -10,43 +10,65 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CityNameTableViewCell2">
-            <rect key="frame" x="0.0" y="0.0" width="239" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="768" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2tS-fo-5gI">
-                        <rect key="frame" x="12" y="12" width="61" height="19"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2tS-fo-5gI">
+                        <rect key="frame" x="8" y="8" width="33" height="33"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="2tS-fo-5gI" secondAttribute="height" multiplier="1:1" id="4Uu-EB-vZg"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kYH-ej-xI2">
-                        <rect key="frame" x="96" y="9" width="222" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kYH-ej-xI2">
+                        <rect key="frame" x="49" y="8" width="259" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C6t-2d-ETy">
-                        <rect key="frame" x="96" y="23" width="222" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C6t-2d-ETy">
+                        <rect key="frame" x="49" y="29" width="259" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t1w-Wp-FEl">
+                        <rect key="frame" x="8" y="8" width="33" height="33"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="C6t-2d-ETy" firstAttribute="top" secondItem="kYH-ej-xI2" secondAttribute="bottom" id="7aN-Ih-e3U"/>
                     <constraint firstAttribute="bottomMargin" secondItem="2tS-fo-5gI" secondAttribute="bottom" id="Ga7-Or-Gmn"/>
+                    <constraint firstItem="2tS-fo-5gI" firstAttribute="width" secondItem="t1w-Wp-FEl" secondAttribute="width" id="K2C-He-aTh"/>
+                    <constraint firstItem="t1w-Wp-FEl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Ozs-ET-75R"/>
+                    <constraint firstItem="2tS-fo-5gI" firstAttribute="height" secondItem="t1w-Wp-FEl" secondAttribute="height" id="S0K-Gr-D8N"/>
                     <constraint firstItem="C6t-2d-ETy" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="16" id="USu-61-3An"/>
                     <constraint firstItem="kYH-ej-xI2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="W9j-0a-XLF"/>
                     <constraint firstItem="C6t-2d-ETy" firstAttribute="leading" secondItem="2tS-fo-5gI" secondAttribute="trailing" constant="8" id="ZoO-Lg-jk3"/>
+                    <constraint firstItem="t1w-Wp-FEl" firstAttribute="leading" secondItem="2tS-fo-5gI" secondAttribute="trailing" id="cSK-g3-AjF"/>
                     <constraint firstItem="2tS-fo-5gI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="eCj-zf-RRa"/>
-                    <constraint firstItem="2tS-fo-5gI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="16" id="fdD-s8-PTs"/>
+                    <constraint firstItem="2tS-fo-5gI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="fdD-s8-PTs"/>
+                    <constraint firstItem="2tS-fo-5gI" firstAttribute="top" secondItem="t1w-Wp-FEl" secondAttribute="top" constant="-6" id="gwA-fZ-vcN"/>
+                    <constraint firstItem="C6t-2d-ETy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="15" id="ibg-Lb-OOz"/>
+                    <constraint firstItem="t1w-Wp-FEl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="m7Z-K1-ver"/>
                     <constraint firstItem="kYH-ej-xI2" firstAttribute="leading" secondItem="2tS-fo-5gI" secondAttribute="trailing" constant="8" id="n4R-gi-bHf"/>
                     <constraint firstItem="kYH-ej-xI2" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="16" id="o4T-bt-gUc"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="gwA-fZ-vcN"/>
+                        <exclude reference="cSK-g3-AjF"/>
+                        <exclude reference="ibg-Lb-OOz"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
+                <outlet property="cultureAbbreviationLabel" destination="t1w-Wp-FEl" id="0dC-RQ-9eH"/>
                 <outlet property="cultureImage" destination="2tS-fo-5gI" id="eE7-aX-8y8"/>
                 <outlet property="cultureLabel" destination="C6t-2d-ETy" id="8Ba-eX-4ov"/>
                 <outlet property="nameLabel" destination="kYH-ej-xI2" id="fUf-5O-sFU"/>
